--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -110,6 +110,7 @@ h4 {
 
 #root {
     min-height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
 }
@@ -162,6 +163,7 @@ h4 {
   cursor: pointer;
   clip-path: polygon(0 5px, 5px 0, calc(100% - 5px) 0, 100% 5px, 100% calc(100% - 5px), calc(100% - 5px) 100%, 5px 100%, 0 calc(100% - 5px));
   transition: background-color .08s;
+  text-wrap: nowrap;
 }
 
 .btn:disabled {
